--- a/intro/package.json
+++ b/intro/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@bonfida/spl-name-service": "^3.0.7",
     "@solana-developers/helpers": "^2.5.6",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/web3.js": "^1.98.0",
     "esrun": "^3.2.26",
     "typescript": "^5.7.2"
